# tabpfn-time-series-exp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  demo.ipynb  modular_feature.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  results.ipynb  visualize_pred_real_dataset.ipynb
.github/workflows/: pull_request.yml
gift_eval/: dataset_definition.py  download_data.sh  evaluate.py  evaluate_mv.py  list_datasets.py  tabpfn_ts_wrapper.py
gift_eval/baseline_results/chronos-bolt-small/: all_results.csv
gift_eval/baseline_results/deepar/: all_results.csv
gift_eval/baseline_results/patchtst/: all_results.csv
gift_eval/results_gifteval_notebook/tabpfn_ts/: all_results.csv
tabpfn_time_series/: __init__.py  data_preparation.py  defaults.py  feature.py  plot.py  predictor.py  tabpfn_worker.py
tabpfn_time_series/experimental/evaluation/: data.py  dataset_definition.py  dataset_w_covariates_properties.json  evaluate_pipeline.py  evaluate_utils.py  pipeline.py
tabpfn_time_series/experimental/features/: __init__.py  auto_features.py  basic_features.py  dataset_seasonality_pipeline.py  feature_generator_base.py  feature_transformer.py  features_ablation.ipynb  more_features.py
tabpfn_time_series/experimental/finetuning/: dataset-back.py  dataset.py  ft_config.py  (+13 more)
tabpfn_time_series/features/: __init__.py  auto_features.py  basic_features.py  feature_generator_base.py  feature_pipeline.py  feature_transformer.py  utils_pipeline.py
tabpfn_time_series/features_sklearn/: feature_pipeline.py
tests/: test_feature_pipeline.py  test_predictor.py
(+108 files in other folders)
