[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabpfn_time_series"
version = "1.0.0"
authors = [
  { name="Liam Shi Bin Hoo", email="hoos@tf.uni-freiburg.de" },
]
description = "Zero-shot time series forecasting with TabPFNv2"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "pandas>=2.1.2, <2.2.0",
    "gluonts>=0.16.0",
    "autogluon.timeseries>=1.2",
    "tabpfn-client>=0.1.7",
    "tabpfn>=2.0.9",
    "datasets>=3.3.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "wandb>=0.19.8",
    "submitit>=1.5.2",
    "ruff~=0.12.0",
    "pre-commit",
    "twine",
    "build",
    "pytest",
]

[tool.hatch.build.targets.wheel]
exclude = ["docs", "gift_eval"]

[tool.hatch.build.targets.sdist]
exclude = ["docs", "gift_eval"]

[project.urls]
"Homepage" = "https://github.com/liam-sbhoo/tabpfn-time-series"
"Bug Tracker" = "https://github.com/liam-sbhoo/tabpfn-time-series/issues"
